[master] added new controller to make query through form and UI

--- a/app/views/pages/maintainer_info.html.erb
+++ b/app/views/pages/maintainer_info.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
-  <h1>Выполнил: Доманин Денис</h1>
-  <h1>Группа: ВИС43</h1>
+<div class="container my-5">
+  <h1 class="display-4">Выполнил: <span class="text-primary">Доманин Денис</span></h1>
+  <h2 class="display-5">Группа: <span class="text-primary">ВИС43</span></h2>
 </div>
