--- a/app/views/queries/index.html.erb
+++ b/app/views/queries/index.html.erb
@@ -1,3 +1,8 @@
 <h1>Все запросы</h1>
 
-<%= link_to 'Запрос №1: Студенты', queries_students_path  %>
+<div class="row">
+  <%= link_to 'Запрос №1: Студенты', queries_students_path  %>
+  <%= link_to 'Запрос №2: Преподаватели', queries_teachers_path  %>
+  <%= link_to 'Запрос №3: Кандидатские и докторские диссертации', queries_topics_path  %>
+  <%= link_to 'Запрос №11: Дипломные работы', queries_theses_path  %>
+</div>
