--- a/app/views/queries/index.html.slim
+++ b/app/views/queries/index.html.slim
@@ -1,7 +1,12 @@
-h1 Все запросы
-.row
-  = link_to 'Запрос №1: Студенты', queries_students_path
-  = link_to 'Запрос №2: Преподаватели', queries_teachers_path
-  = link_to 'Запрос №3: Кандидатские и докторские диссертации', queries_topics_path
-  = link_to 'Запрос №11: Дипломные работы', queries_theses_path
-  = link_to 'Запрос №12: Руководители дипломных работ', queries_thesis_advisors_path
+.container.my-5
+  h1.text-center.mb-5 Все запросы
+
+  .row.justify-content-center
+    .col-md-12
+      .list-group
+        = link_to 'Запрос №1: Студенты', queries_students_path, class: 'list-group-item list-group-item-action'
+        = link_to 'Запрос №2: Преподаватели', queries_teachers_path, class: 'list-group-item list-group-item-action'
+        = link_to 'Запрос №3: Кандидатские и докторские диссертации', queries_topics_path, class: 'list-group-item list-group-item-action'
+        = link_to 'Запрос №11: Дипломные работы', queries_theses_path, class: 'list-group-item list-group-item-action'
+        = link_to 'Запрос №12: Руководители дипломных работ', queries_thesis_advisors_path, class: 'list-group-item list-group-item-action'
+
