--- a/app/views/students/index.html.slim
+++ b/app/views/students/index.html.slim
@@ -1,1 +1,3 @@
-= render 'students/table'
+= link_to 'Добавить нового студента', new_student_path, class: 'btn btn-secondary mb-5'
+
+= render 'table'
