--- a/app/views/teachers/_table.html.slim
+++ b/app/views/teachers/_table.html.slim
@@ -16,6 +16,7 @@
             th.text-center.align-middle Имеет докторскую степень
             th.text-center.align-middle Кафедра
             th.text-center.align-middle Факультет
+            th.text-center.align-middle Действия
         tbody
           - @teachers.each do |teacher|
             tr
@@ -29,6 +30,11 @@
               td.text-center.align-middle = teacher.has_phd ? 'Да' : 'Нет'
               td.align-middle = teacher.department.name || '—'
               td.align-middle = teacher.faculty.name || '—'
+              td.align-middle
+                .d-flex.flex-column.align-items-center
+                  = link_to 'Показать', teacher_path(teacher), class: 'btn btn-info btn-sm mb-2', style: 'width: 100%;'
+                  = link_to 'Редактировать', edit_teacher_path(teacher), class: 'btn btn-warning btn-sm mb-2', style: 'width: 100%;'
+                  = link_to 'Удалить', teacher_path(teacher), method: :delete, data: { confirm: 'Вы уверены, что хотите удалить этот элемент?' }, class: 'btn btn-danger btn-sm', style: 'width: 100%;'
 
     p.text-end.fw-bold
       | Общее количество преподавателей:
