--- a/app/views/pages/homepage.html.slim
+++ b/app/views/pages/homepage.html.slim
@@ -16,3 +16,6 @@
           = link_to 'Преподаватели', teachers_path, class: 'btn btn-success btn-lg btn-block mb-3 w-75'
           = link_to 'Дипломы', theses_path, class: 'btn btn-success btn-lg btn-block mb-3 w-75'
           = link_to 'Научные работы', topics_path, class: 'btn btn-success btn-lg btn-block mb-3 w-75'
+          = link_to 'Предметы', disciplines_path, class: 'btn btn-success btn-lg btn-block mb-3 w-75'
+          = link_to 'Типы занятий', class_types_path, class: 'btn btn-success btn-lg btn-block mb-3 w-75'
+          = link_to 'Оценки', exams_path, class: 'btn btn-success btn-lg btn-block mb-3 w-75'
