--- a/app/views/students/_form.html.slim
+++ b/app/views/students/_form.html.slim
@@ -3,7 +3,6 @@
 - else
   h1 Добавление новой записи
 
-
 = simple_form_for @student do |f|
   .field
     = f.input :first_name, label: "Имя:"
@@ -20,6 +19,6 @@
   .field
     = f.input :scholarship_amount, label: "Размер стипендии:", step: 0.01
   .field
-    = f.input :group_id, label: "Группа:", collection: Group.all, prompt: 'Select Group'
+    = f.input :group_id, label: "Группа:", collection: Group.all, prompt: 'Выберите группу'
   .actions
     = f.submit "Отправить"
