[master] added crud for another tables

--- a/app/views/pages/homepage.html.slim
+++ b/app/views/pages/homepage.html.slim
@@ -19,3 +19,5 @@
           = link_to 'Предметы', disciplines_path, class: 'btn btn-success btn-lg btn-block mb-3 w-75'
           = link_to 'Типы занятий', class_types_path, class: 'btn btn-success btn-lg btn-block mb-3 w-75'
           = link_to 'Оценки', exams_path, class: 'btn btn-success btn-lg btn-block mb-3 w-75'
+          = link_to 'Группы', groups_path, class: 'btn btn-success btn-lg btn-block mb-3 w-75'
+          = link_to 'Расписание', curriculums_path, class: 'btn btn-success btn-lg btn-block mb-3 w-75'
