[master] added crud for new tables and etc.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
 @import "bootstrap";
+@import "flatpickr/dist/flatpickr";
 
 .simple-form-label {
   display: block; /* Убедитесь, что метка отображается как блочный элемент */
