--- a/app/views/curriculums/_form.html.slim
+++ b/app/views/curriculums/_form.html.slim
@@ -1,6 +1,6 @@
 .mb-4.text-center
   - if params[:action] == 'edit'
-    h1 Редактирование данных расписания №#{@curriculum.id}
+    h1 Редактирование данных учебного плана №#{@curriculum.id}
   - else
     h1 Добавление новой записи
 
