--- a/app/views/curriculums/_table.html.slim
+++ b/app/views/curriculums/_table.html.slim
@@ -1,5 +1,5 @@
 .div.table
-  h1.mb-4.text-center Таблица: Расписание
+  h1.mb-4.text-center Таблица: Учебный план
 
   - unless @curriculums.blank?
     .table-responsive
