--- a/app/views/curriculums/show.html.slim
+++ b/app/views/curriculums/show.html.slim
@@ -1,11 +1,11 @@
-= link_to 'Назад к списку расписаний', curriculums_path, class: 'btn btn-secondary mb-5'
+= link_to 'Назад к списку учебного плана', curriculums_path, class: 'btn btn-secondary mb-5'
 
 div.container
   .row.mb-4
     .col-md-8.offset-md-2
       .card.shadow
         .card-header.bg-primary.text-white
-          h5 Информация о расписании
+          h5 Информация о учебном плане
         .card-body
           .list-group
             .list-group-item
