--- a/app/views/curriculums/edit.html.slim
+++ b/app/views/curriculums/edit.html.slim
@@ -1,3 +1,3 @@
-= link_to 'Назад к списку расписаний', curriculums_path, class: 'btn btn-secondary mb-5'
+= link_to 'Назад к списку учебного плана', curriculums_path, class: 'btn btn-secondary mb-5'
 
 = render 'form'
