--- a/app/views/curriculums/index.html.slim
+++ b/app/views/curriculums/index.html.slim
@@ -1,3 +1,3 @@
-= link_to 'Добавить новое расписание', new_curriculum_path, class: 'btn btn-secondary mb-5'
+= link_to 'Добавить новый учебный план', new_curriculum_path, class: 'btn btn-secondary mb-5'
 
 = render 'table'
