--- a/app/views/departments/_search_form.html.slim
+++ b/app/views/departments/_search_form.html.slim
@@ -1,5 +1,5 @@
 .row.mt-5#formContainer
-  = search_form_for @q, builder: SimpleForm::FormBuilder, wrapper: :vertical_form, html: { class: 'form-horizontal', role: 'form', method: :get }, url: queries_theses_path do |f|
+  = search_form_for @q, builder: SimpleForm::FormBuilder, wrapper: :vertical_form, html: { class: 'form-horizontal', role: 'form', method: :get }, url: queries_departments_path do |f|
     .row
       .col-md-8.offset-md-2
         .card
