[master] added new endpoints for filter tables

--- a/app/views/class_types/_table.html.slim
+++ b/app/views/class_types/_table.html.slim
@@ -1,5 +1,5 @@
 .div.table
-  h1.mb-4.text-center Таблица: Типы занятий
+  h1.mb-4.text-center Таблица: Виды занятий
 
   - unless @class_types.blank?
     .table-responsive
