--- a/app/views/departments/_form.html.slim
+++ b/app/views/departments/_form.html.slim
@@ -1,6 +1,6 @@
 .mb-4
   - if params[:action] == 'edit'
-    h1 Редактирование данных предмета №#{@department.id}
+    h1 Редактирование данных кафедры №#{@department.id}
   - else
     h1 Добавление новой записи
 
