--- a/app/views/exams/_form.html.slim
+++ b/app/views/exams/_form.html.slim
@@ -15,5 +15,9 @@
     = f.input :grade, label: "Оценка:"
   .field
     = f.input :semester, label: "Семестр:"
+  .field
+    = f.input :course, label: "Курс:"
+  .field
+    = f.input :pass_date, label: "Дата сдачи:"
   .actions
     = f.submit "Отправить"
