--- a/app/views/groups/_form.html.slim
+++ b/app/views/groups/_form.html.slim
@@ -16,6 +16,8 @@
   .field
     = f.input :course, label: "Курс:"
   .field
+    = f.input :semester, label: "Семестр:"
+  .field
     = f.input :graduated, label: "Выпустились?", as: :boolean
   .actions
     = f.submit "Отправить"
