--- a/app/views/queries/departments.html.slim
+++ b/app/views/queries/departments.html.slim
@@ -9,7 +9,7 @@ h1.text-center.my-4.text-info Запросы для кафедры
     i.bi.bi-arrow-clockwise.d-inline-block.me-1
     | Обновить
 
-  / = render 'theses/search_form'
+  = render 'departments/search_form'
 
   .mt-5
-    / = render 'theses/table'
+    = render 'departments/table'
