--- a/app/views/queries/index.html.slim
+++ b/app/views/queries/index.html.slim
@@ -9,6 +9,12 @@
         = link_to 'Запрос №3: Кандидатские и докторские диссертации', queries_topics_path, class: 'list-group-item list-group-item-action'
         = link_to 'Запрос №4: Кафедры', queries_departments_path, class: 'list-group-item list-group-item-action'
         = link_to 'Запрос №5: Преподватели и расписание', queries_teacher_schedules_path, class: 'list-group-item list-group-item-action'
+        = link_to 'Запрос №6: Преподватели и расписание по виду занятия', queries_teacher_class_type_schedules_path, class: 'list-group-item list-group-item-action'
+        = link_to 'Запрос №7: Студенты и экзамены', queries_students_exams_path, class: 'list-group-item list-group-item-action'
+        = link_to 'Запрос №8: Оценки для студентов', queries_students_exams_grades_path, class: 'list-group-item list-group-item-action'
+        = link_to 'Запрос №9: Преподаватели и экзамены', queries_teacher_exams_path, class: 'list-group-item list-group-item-action'
+        = link_to 'Запрос №10: Оценки студентов от преподователей', queries_students_teachers_exams_path, class: 'list-group-item list-group-item-action'
         = link_to 'Запрос №11: Дипломные работы', queries_theses_path, class: 'list-group-item list-group-item-action'
         = link_to 'Запрос №12: Руководители дипломных работ', queries_thesis_advisors_path, class: 'list-group-item list-group-item-action'
+        = link_to 'Запрос №13: Нагрузка преподавателей', queries_teachers_load_path, class: 'list-group-item list-group-item-action'
 
