--- a/app/views/queries/teacher_schedules.html.slim
+++ b/app/views/queries/teacher_schedules.html.slim
@@ -1,8 +1,11 @@
-h1.text-center.my-4.text-info Запросы для расписания преподвателей
-
+h1.text-center.my-4.text-info Запрос №5
+.col-4
+  p Получить список и общее число преподавателей, проводивших (проводящих)
+    занятия по указанной дисциплине в указанной группе либо на указанном курсе
+    указанного факультета.
 .container.my-5
   button#toggleFormButton.btn.btn-primary Показать форму
-  a.m-3 href="/queries/thesis_advisors" class="btn btn-outline-secondary" role="button"
+  a.m-3 href="/queries/teacher_schedules" class="btn btn-outline-secondary" role="button"
     i.bi.bi-arrow-clockwise.d-inline-block.me-1
     | Обновить
 
