--- a/app/views/departments/index.html.slim
+++ b/app/views/departments/index.html.slim
@@ -1,3 +1,3 @@
-= link_to 'Добавить новый предмет', new_department_path, class: 'btn btn-secondary mb-5'
+= link_to 'Добавить новую кафедру', new_department_path, class: 'btn btn-secondary mb-5'
 
 = render 'table'
