--- a/app/views/exams/_table.html.slim
+++ b/app/views/exams/_table.html.slim
@@ -6,21 +6,26 @@
       table.table.table-striped.table-bordered.table-hover
         thead.table-dark
           tr
+            th.text-center.align-middle Группа
             th.text-center.align-middle Студент
             th.text-center.align-middle Предмет
             th.text-center.align-middle Преподаватель
             th.text-center.align-middle Оценка
             th.text-center.align-middle Семестр
+            th.text-center.align-middle Курс
+            th.text-center.align-middle Дата сдачи
             th.text-center.align-middle Действия
         tbody
           - @exams.each do |exam|
             tr
-              td.text-center.align-middle = exam.student.full_name
-              td.text-center.align-middle = exam.discipline.name
-              / todo: fix relation
-              td.text-center.align-middle = exam.teacher&.full_name
+              td.text-center.align-middle = link_to exam.student.group.name, group_url(exam.student.group)
+              td.text-center.align-middle = link_to exam.student.full_name, student_url(exam.student)
+              td.text-center.align-middle = link_to exam.discipline.name, discipline_url(exam.discipline)
+              td.text-center.align-middle = link_to exam.teacher.full_name, teacher_url(exam.teacher)
               td.text-center.align-middle = exam.grade
               td.text-center.align-middle = exam.semester
+              td.text-center.align-middle = exam.course
+              td.text-center.align-middle = exam.pass_date
               td.align-middle
                 .d-flex.flex-column.align-items-center
                   = link_to 'Показать', exam_path(exam), class: 'btn btn-info btn-sm mb-2', style: 'width: 100%;'
