--- a/app/views/groups/_table.html.slim
+++ b/app/views/groups/_table.html.slim
@@ -11,6 +11,7 @@
             th.text-center.align-middle Кафедра
             th.text-center.align-middle Год поступления
             th.text-center.align-middle Курс
+            th.text-center.align-middle Семестр
             th.text-center.align-middle Выпустились?
             th.text-center.align-middle Действия
         tbody
@@ -21,6 +22,7 @@
               td.align-middle = group.department.name
               td.text-center.align-middle = group.enrollment_year
               td.text-center.align-middle = group.course
+              td.text-center.align-middle = group.semester
               td.text-center.align-middle = group.graduated ? 'Да' : 'Нет'
               td.align-middle
                 .d-flex.flex-column.align-items-center
