--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,7 +10,10 @@
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
           <i class="fa fa-home"></i>
-          <a class="nav-link active" aria-current="page" href="/">Homepage</a>
+          <a class="nav-link active" aria-current="page" href="/">Главная</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="/queries">Запросы</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="https://getbootstrap.com/docs/5.1/getting-started/introduction/" target="_blank">Bootstrap docs</a>
