--- a/app/views/students/_table.html.slim
+++ b/app/views/students/_table.html.slim
@@ -1,5 +1,5 @@
 div.table
-  h1.mb-4.text-center Таблица: Студенты
+  h1.mb-4.text-center Студенты
 
   - unless @students.blank?
     .table-responsive
@@ -32,8 +32,6 @@ div.table
                   = link_to 'Редактировать', edit_student_path(student), class: 'btn btn-warning btn-sm mb-2', style: 'width: 100%;'
                   = link_to 'Удалить', student_path(student), method: :delete, data: { confirm: 'Вы уверены, что хотите удалить этот элемент?' }, class: 'btn btn-danger btn-sm', style: 'width: 100%;'
 
-    p.text-end.fw-bold
-      | Общее количество студентов:
-      = @students.count
+    p.text-end.fw-bold = "Общее количество: #{@students.count}"
   - else
     p.mt-5.text-center.fw-bold Записи не найдены
