--- a/app/views/pages/homepage.html.slim
+++ b/app/views/pages/homepage.html.slim
@@ -3,17 +3,18 @@
     .col
       = link_to 'Информация об авторе', pages_maintainer_info_path, class: 'btn btn-outline-primary btn-lg'
     .col
-      = link_to 'Все запросы', queries_path, class: 'btn btn-outline-primary btn-lg'
+      = link_to 'Все запросы', queries_path, class: 'btn btn-outline-primary btn-lg' if current_user&.is_admin
 
   hr.my-4
 
-.row.justify-content-center.mt-5
-  .col-md-8
-    .card.shadow-lg.border-0
-      .card-body.text-center
-        h4.mb-4.text-success Выберите таблицу
-        .row
-          - @tables.each do |label, path|
-            .col-md-4.mb-3.d-flex
-              = link_to path, class: 'btn btn-outline-success btn-lg w-100 h-100 d-flex align-items-center justify-content-center' do
-                = label
+- if current_user&.is_admin
+  .row.justify-content-center.mt-5
+    .col-md-8
+      .card.shadow-lg.border-0
+        .card-body.text-center
+          h4.mb-4.text-success Выберите таблицу
+          .row
+            - @tables.each do |label, path|
+              .col-md-4.mb-3.d-flex
+                = link_to path, class: 'btn btn-outline-success btn-lg w-100 h-100 d-flex align-items-center justify-content-center' do
+                  = label
